--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "type": "Polygon",
         "coordinates": []
     },
-    "queue": "raw_ondemand",
+    "queue": "raw_daemon",
     "dataset": {
         "dataset_prefix": "hotosm_project_1",
         "dataset_folder": "TM",
