--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -8,7 +8,10 @@ on:
       raw_data_api_url:
         description: "Enter Raw data url"
         default: "https://api-prod.raw-data.hotosm.org/v1"
-        required: false 
+        required: false
+      raw_data_api_auth_token:
+        description: "Raw data api authentication token"
+        required: false
       projectHours:
         description: "Number of hours to fetch active projects (1-24)"
         required: false
@@ -48,5 +51,5 @@ jobs:
         run: python tm_extractor.py --fetch-active-projects ${{ steps.project_hours.outputs.value }}
         env:
           RAW_DATA_API_BASE_URL: ${{ github.event.inputs.raw_data_api_url }}
-          RAWDATA_API_AUTH_TOKEN: ${{ secrets.RAWDATA_API_AUTH_TOKEN }}
+          RAWDATA_API_AUTH_TOKEN: ${{ github.event.inputs.raw_data_api_auth_token || secrets.RAWDATA_API_AUTH_TOKEN }}
           TASKING_MANAGER_API_KEY: ${{ github.event.inputs.tasking_manager_api_key || 'None' }}
