--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -50,6 +50,6 @@ jobs:
       - name: Shoot daily projects
         run: python tm_extractor.py --fetch-active-projects ${{ steps.project_hours.outputs.value }}
         env:
-          RAW_DATA_API_BASE_URL: ${{ github.event.inputs.raw_data_api_url }}
+          RAW_DATA_API_BASE_URL: ${{ github.event.inputs.raw_data_api_url || "https://api-prod.raw-data.hotosm.org/v1" }}
           RAWDATA_API_AUTH_TOKEN: ${{ github.event.inputs.raw_data_api_auth_token || secrets.RAWDATA_API_AUTH_TOKEN }}
           TASKING_MANAGER_API_KEY: ${{ github.event.inputs.tasking_manager_api_key || 'None' }}
